--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     "manifest_version": 3,
     "name": "엔트리-바로가기",
-    "version": "1.0",
-    "description": "엔트리에서 클릭해서 바로가기가 지원되지 않는 알람도 바로가기 지원이 되게 해줍니다.",
+    "version": "1.1",
+    "description": "엔트리에서 클릭해서 바로가기가 지원되지 않는 알림도 바로가기 지원이 되게 해줍니다.",
     "icons": {
         "16": "16.png",
         "48": "48.png",
